[SELC-5249] Feat: Refactor api getInstitution to retrieve list of user product actions in addition to boolean authorize (#470)
