# connector-api/src/main/java/it/pagopa/selfcare/dashboard/connector/model/institution/OnboardedProduct.java
@@ -2,6 +2,8 @@ package it.pagopa.selfcare.dashboard.connector.model.institution;
 
 import lombok.Data;
 
+import java.util.List;
+
 @Data
 public class OnboardedProduct {
     private String productId;
@@ -9,4 +11,5 @@ public class OnboardedProduct {
     private RelationshipState status;
     private boolean authorized;
     private Billing billing;
+    private List<String> userProductActions;
 }
